--- a/html_advanced/29-index.html
+++ b/html_advanced/29-index.html
@@ -2,14 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <title>Article - Techium</title>
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <title>Homepage - Techium</title>
   </head>
   <body>
 
+    <!-- Header -->
     <header>
       <div>
         <div>
@@ -29,26 +26,94 @@
       </div>
     </header>
 
+    <!-- Main -->
     <main>
-      <h1>Homepage</h1>
 
+      <!-- Hero section -->
       <section>
         <div>
-          <h2>We help you build your brand!</h2>
-          <a href="#">Get started</a>
+          <header>
+            <h1>Homepage</h1>
+          </header>
         </div>
       </section>
 
-      <section id="services">
+      <!-- Services section -->
+      <section>
         <div>
           <header>
             <h2>Services</h2>
             <p>We work with you</p>
           </header>
+          <div>
+            <h3>Design &amp; Concept</h3>
+            <h3>Digital Strategy</h3>
+            <h3>Content Strategy</h3>
+            <h3>UX Design</h3>
+            <h3>Web Development</h3>
+            <h3>Social Media</h3>
+          </div>
         </div>
       </section>
 
-      <section id="testimonials">
+      <!-- Works section -->
+      <section>
+        <div>
+          <header>
+            <h2>Works</h2>
+            <p>Take a look in our portfolio</p>
+          </header>
+          <div>
+            <article>Work #1</article>
+            <article>Work #2</article>
+            <article>Work #3</article>
+          </div>
+        </div>
+      </section>
+
+      <!-- About Us section -->
+      <section>
+        <div>
+          <header>
+            <h2>About Us</h2>
+            <p>Everything about us</p>
+          </header>
+          <div>
+            <h3>Who are we</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <h3>Our culture</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <h3>How we work</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Latest news section -->
+      <section>
+        <div>
+          <header>
+            <h2>Latest news</h2>
+          </header>
+          <div>
+            <article>
+              <p>Career</p>
+              <h3>Hoc loco tenere se Triarius non potuit.</h3>
+            </article>
+            <article>
+              <p>Digital Life</p>
+              <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+            </article>
+            <article>
+              <p>Social</p>
+              <h3>Bestiarum vero nullum iudicium puto.</h3>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonials section (Task 29 focus) -->
+      <section>
         <div>
           <header>
             <h2>Testimonials</h2>
@@ -57,39 +122,58 @@
           <div>
             <article>
               <blockquote>
-                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
-                <cite>Yuri Y.</cite>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
               </blockquote>
+              <cite>Yuri Y.</cite>
             </article>
+
             <article>
               <blockquote>
-                <p>Thank you so much for your help. Techium company is awesome!</p>
-                <cite>Dorrie S.</cite>
+                Thank you so much for your help. Techium company is awesome!
               </blockquote>
+              <cite>Dorrie S.</cite>
             </article>
+
             <article>
               <blockquote>
-                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
-                <cite>Sven H.</cite>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
               </blockquote>
+              <cite>Sven H.</cite>
             </article>
           </div>
         </div>
       </section>
 
-      <section id="contact">
+      <!-- Contact section -->
+      <section>
         <div>
           <header>
             <h2>Contact</h2>
             <p>We like to know new people</p>
           </header>
+          <div>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </div>
         </div>
       </section>
 
     </main>
 
+    <!-- Footer -->
     <footer>
-      <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+      <div>
+        <ul>
+          <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+          <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+          <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+        </ul>
+      </div>
+
+      <hr>
+
+      <div>
+        <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+      </div>
     </footer>
 
   </body>
