--- a/html_advanced/34-styleguide.html
+++ b/html_advanced/34-styleguide.html
@@ -1,47 +1,190 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Styleguide - Techium</title>
-</head>
-<body>
-  <main>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <title>Styleguide - Techium</title>
+    <meta name="description" content="Techium is a digital agency">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
+    <link rel="icon" type="image/png" href="./favicon.png">
+  </head>
+  <body>
+    <header></header>
 
-    <!-- Table -->
-    <section>
-      <header>
-        <h2>Table</h2>
-      </header>
-    </section>
+    <main>
+      <section>
+        <header>
+          <h2>Headings</h2>
+        </header>
+        <h1>Heading level 1</h1>
+        <h2>Heading level 2</h2>
+        <h3>Heading level 3</h3>
+        <h4>Heading level 4</h4>
+        <h5>Heading level 5</h5>
+        <h6>Heading level 6</h6>
+      </section>
 
-    <!-- Details -->
-    <section>
-      <header>
-        <h2>Details</h2>
-      </header>
+      <section>
+        <header>
+          <h2>Paragraph</h2>
+        </header>
+        <h2>Heading with a subtitle</h2>
+        <p>This is my subtitle</p>
+        <p>
+          Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio
+          porttitor sem non mi integer non faucibus ornare mi ut ante amet
+          placerat aliquet.
+        </p>
+      </section>
 
-      <div>
-        <h3>Default</h3>
-        <details>
-          <summary>Show/Hide me</summary>
+      <!-- Lists -->
+      <section>
+        <header>
+          <h2>Lists</h2>
+        </header>
+        <div>
+          <h3>Unordered</h3>
+          <ul>
+            <li>Dolor pulvinar etiam magna etiam.</li>
+            <li>Sagittis adipiscing lorem eleifend.</li>
+            <li>Felis enim feugiat dolore viverra.</li>
+          </ul>
+
+          <h3>Ordered</h3>
+          <ol>
+            <li>Dolor pulvinar etiam magna etiam.</li>
+            <li>Sagittis adipiscing lorem eleifend.</li>
+            <li>Felis enim feugiat dolore viverra.</li>
+          </ol>
+
+          <h3>Definition</h3>
+          <dl>
+            <dt>Definition List title</dt>
+            <dd>Definition text</dd>
+            <dt>Startup</dt>
+            <dd>
+              A startup company or startup is a company or temporary organization
+              designed to search for a repeatable and scalable business model.
+            </dd>
+          </dl>
+        </div>
+      </section>
+
+      <!-- Horizontal rule -->
+      <section>
+        <header>
+          <h2>Horizontal rule</h2>
+        </header>
+        <hr>
+      </section>
+
+      <!-- Blockquotes -->
+      <section>
+        <header>
+          <h2>Blockquotes</h2>
+        </header>
+        <div>
+          <h3>Inline quote</h3>
+          <q>Stay hungry. Stay foolish.</q>
+        </div>
+        <div>
+          <h3>Blockquote</h3>
+          <blockquote>
+            <p>
+              I will be the leader of a company that ends up being worth billions
+              of dollars.
+              <cite>Kanye West, Musician</cite>
+            </p>
+          </blockquote>
+        </div>
+      </section>
+
+      <!-- Typography -->
+      <section>
+        <header>
+          <h2>Typography</h2>
+        </header>
+        <div>
+          <address>
+            320 Stewart Avenue, Unit 12<br>
+            New York City<br>
+            NY 10001
+          </address>
+        </div>
+
+        <div>
+          <pre>
+<h2>My title</h2>
+<p>
+Proin lacus turpis, feugiat sit amet sollicitudin non, volutpat in libero.
+</p>
+          </pre>
+        </div>
+
+        <div>
           <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+            Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>.
+            Duis finibus leo massa, eget dapibus erat finibus sed.
+            Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi
+            consequat ut.
           </p>
-        </details>
-      </div>
+        </div>
+      </section>
 
-      <div>
-        <h3>Open</h3>
-        <details open>
-          <summary>Always open</summary>
-          <p>
-            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-          </p>
-        </details>
-      </div>
+      <!-- Table -->
+      <section>
+        <header>
+          <h2>Table</h2>
+        </header>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">Title</th>
+              <th scope="col">Director</th>
+              <th scope="col">Release Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Star Wars: Episode IV</th>
+              <td>George Lucas</td>
+              <td>1977</td>
+            </tr>
+            <tr>
+              <th scope="row">Star Wars: Episode V</th>
+              <td>Irvin Kershner</td>
+              <td>1980</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
 
-    </section>
+      <!-- Details -->
+      <section>
+        <header>
+          <h2>Details</h2>
+        </header>
 
-  </main>
-</body>
+        <div>
+          <h3>Default</h3>
+          <details>
+            <summary>Show/Hide me</summary>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada
+            fames ac turpis egestas.
+          </details>
+        </div>
+
+        <div>
+          <h3>Open</h3>
+          <details open>
+            <summary>Always open</summary>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada
+            fames ac turpis egestas.
+          </details>
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
+  </body>
 </html>
